syntax = "proto3";
import "bignum.proto";
package sequencer;

option java_multiple_files = true;
option java_package = "co.chainring.sequencer.proto";
option java_outer_classname = "OrderSchema";

message Order {
  uint64 guid  = 1;

  enum Type {
    MarketBuy = 0;
    MarketSell = 1;
    LimitBuy = 2;
    LimitSell = 3;
  }

  Type type = 3;
  IntegerValue amount = 4;
  optional DecimalValue price = 5; // required for limit orders
  optional IntegerValue nonce = 6; // required for add order
  optional string signature = 7; // required for add order (created CHAIN-123 as order updates should require a new signature)
  string externalGuid = 8;
  uint32 chainId = 9; // the chain id used when creating the signature - does not need to be related to the chain(s) of the market
  optional uint32 percentage = 10;
}

message CancelOrder {
  uint64 guid = 1;
  string externalGuid = 2;
}

message OrderBatch {
  string guid = 1;
  string marketId = 2;
  uint64 wallet = 3;
  repeated Order ordersToAdd = 4;
  repeated Order ordersToChange = 5;
  repeated CancelOrder ordersToCancel = 6; // order guids
  bool cancelAll = 7;
}

enum OrderDisposition {
  Filled = 0;
  PartiallyFilled = 1;
  Accepted = 2;
  Rejected = 3;
  Failed = 4;
  Canceled = 5;
  AutoReduced = 6;
}